name:                blaze-isobmff
version:             0.1.0.0
synopsis:            Blaze-Builder for the ISO base media file format ISO-14496-12
description:         Please see README.md
homepage:            https://github.com/sheyll/blaze-isobmff#readme
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll
maintainer:          sven.heyll@gmail.com
copyright:           2016 Sven Heyll
category:            Codec
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Media.IsoBaseFileFormat.Blaze.Builder
                     , Media.IsoBaseFileFormat.Blaze.Types.Box
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeFamilyDependencies
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances

source-repository head
  type:     git
  location: https://github.com/githubuser/blaze-isobmff
